<resources>
    <string name="app_name">Products</string>
    <string name="error_unexpected_message">Unexpected error occurred. We are working on it.</string>
    <string name="error_client_unexpected_message">Something technically is wrong. We are working on it.</string>
    <string name="error_server_unexpected_message">Oops! Something went wrong on the server. We are working on it.</string>
    <string name="label_no_data_found">No data found</string>
    <string name="btn_try_again">Try again</string>
    <string name="label_internet_not_available">Please check your internet connection and try again later.</string>
    <string name="product">Product</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_data">Add Product Data</string>
    <string name="images">Images</string>
    <string name="add_title">Add title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_description">Add description</string>
    <string name="price">Price</string>
    <string name="add_price">Add price</string>
    <string name="discount">Discount</string>
    <string name="add_discount">Add discount</string>
    <string name="permission_camera_access_required">This app needs access to your camera for take pictures, please enable it</string>
    <string name="mandatory_permission_access_required">This app needs access to your camera for take pictures, please enable it in settings</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Gallery</string>
    <string name="no_internet_connection_load_catch">No internet connection available, loading data from the local cache</string>
    <string name="product_successfully_added">Product added successfully, you can check it on the product list</string>
    <string name="price_string">$%d</string>
    <string name="discount_string">%1.2f discount</string>
    <string name="maximum_five_image">You can only upload a maximum of 5 images</string>
    <string name="are_you_sure_you_want">Are you sure you want to delete an image?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
</resources>